fixed errors with sonarqube